# users_api_test

./: .env.dist  .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
users_project/: __init__.py  config.py  utils.py  validators.py
users_project/auth_api/: tasks.py  views.py
users_project/auth_api/services/: basic_auth.py  refresh_token.py
users_project/users_api/: models.py  schemas.py  views.py
users_project/users_api/services/: upload_users_from_file.py  users_crud.py
